--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <main>
-        <section>
+        <section class="bg-wallpaper">
                 <div class="container">
                     <div class="score-board rainbow" >
                         <p class="">Game Score: <span id="score">000000</span></p>
