--- a/index-2.html
+++ b/index-2.html
@@ -13,10 +13,40 @@
 
 <body>
     <div class="container">
-        <h1>Hello World</h1>
+        <div class="row general mt-5">
+            <div class="col-12">
+                <div  class=" d-flex justify-content-between align-items-center ">
+                    <div class="card-size" >
+                        <img src="assets/Img/universe-space-stars-2129287-wallhere.com.jpg" alt="View" />
+                    </div>
+                    <div class="card-size">
+                        <img src="assets/Img/universe-space-stars-2129287-wallhere.com.jpg" alt="View" />
+                    </div>
+                    <div class="card-size">
+                        <img src="assets/Img/universe-space-stars-2129287-wallhere.com.jpg" alt="View" />
+                    </div>
+                </div>
+
+            </div>
+            <form>
+                <div class=" mt-5 d-flex">
+                    <label for="d-block">Opacity:</label>
+                    <input id="rangeinp" type="range" min="0" max="10"  class="mt-1 ms-2" />
+                    <span id="range-txt" class="ps-1">0%</span>
+                </div>
+                <div class=" mt-3 d-flex">
+                    <label for="d-block">Border:</label>
+                    <input id="border-rangeinp" type="range" min="0" max="5"  class="mt-1 ms-2" />
+                    <span id="range-txt-sec" class="ps-2">0%</span>
+                </div>
+            </form>
+        </div>
     </div>
 
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
     <script src="assets/Js/main.js"></script>
 </body>
 
